[tool.poetry]
name = "marketmaven"
version = "0.1.0"
description = ""
authors = ["ethantenison <tenison.ethan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pandas = "^2.2.2"
yfinance = "^0.2.40"
matplotlib = "^3.9.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
